<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SWTOR Central</string>
    <string name="server_name">Server Status</string>
    <string name="reader_name">News</string>
    <string name="datacron_name">Datacron</string>
    <string name="main_header">SWTOR Central</string>
    <string name="class_header">Classes</string>
    <string name="settings_header">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_server">Server Status</string>
    <string name="server_main">Server Status</string>
    <string name="serverkey_sub">Color Key</string>
    <string name="server_us">United States</string>
    <string name="server_eu">European</string>
    <string name="server_sub">Servers</string>
    <string name="advanced_main">Advanced Class</string>
    <string name="progression_main">Progression</string>
    <string name="faction_main">Faction</string>
    <string name="event_main">In-Game Events</string>
    <string name="planet_main">Planet</string>
    <string name="character_main">Characters</string>
    <string name="character_add_main">Add Character</string>
    <string name="character_edit_main">Edit Character</string>
    <string name="ability_detail_main">Ability Details</string>
    <string name="achievements_main">Achievements</string>
    <string name="tutorials_main">Tutorials</string>
    <string name="video_main">Test</string>
    <string name="test_main">Test</string>
    <string name="abilities">Abilities</string>
    <string name="companion">Companion</string>
    <string name="advanced_classes">Advanced Classes</string>
    <string name="image">Thumbnail</string>
    <string name="image_placeholder">Placeholder for Images</string>
   	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="server1">US Servers</string>
    <string name="header1">Menu</string>
    <string name="draweritem1">News</string>
    <string name="draweritem2">Server Status</string>
    <string name="draweritem3">Datacrons</string>
    <string name="draweritem4">Classes</string>
    <string name="draweritem5">Progression</string>
    <string name="draweritem6">In-Game Events</string>
    <string name="draweritem7">Characters</string>
    <string name="draweritem8">Achievements</string>
    <string name="draweritem9">Tutorials</string>
    <string name="draweritem10">Settings</string>
    <string name="header2">Advanced</string>
	<string name="tab1">US Servers</string>
    <string name="tab2">European Servers</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
 
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
     
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="button">Add</string>
    <string name="testcodex">Codex: Galactic History 47: Naddist Rebels</string>
    <string name="testcoord">X: 1107, Y: 80</string>
    <string name="testreward">Aim +4</string>
    
    <string name="republic">Republic</string>
    <string name="empire">Empire</string>
	
    <string name="companiongifts">Gifts:</string>
    
    <string name="informationsub">Information</string>
    <string name="datacronsub">Datacrons</string>
    <string name="locationslore">Locations</string>
    <string name="personslore">Persons</string>
    <string name="titleslore">Titles</string>
    <string name="gameruleslore">Game Rules</string>
    <string name="beastlore">Beast</string>
    <string name="lore">Lore</string>
    
    <string name="faction">Faction</string>
    <string name="factionsub">Please Choose</string>
    
    <string name="progressionsub">Progression</string>
    
    <string name="characters">Characters</string>
    <string name="character_menu_add">Add Character</string>
    <string name="character_menu_save">Save</string>
    <string name="character_menu_edit">Edit</string>
    <string name="character_menu_delete">Delete</string>
    
    <string name="character_name_hint">Name</string>
    <string name="character_legacy_label1">The</string>
    <string name="character_legacy_label2">Legacy</string>
    <string name="character_legacy_hint">Legacy Name</string>
    <string name="character_description_hint">Description</string>
    <string name="character_level_hint">Level</string>
    <string name="character_label_gender">Gender: </string>
    <string name="character_label_class">Class: </string>
    <string name="character_label_advancedclass">Advanced Class: </string>
    <string name="character_label_race">Race: </string>
    <string name="character_label_alignment">Alignment: </string>
    <string name="character_label_crew1">Crew Skill 1: </string>
    <string name="character_label_crew2">Crew Skill 2: </string>
    <string name="character_label_crew3">Crew Skill 3: </string>
    
    <string name="server_light">Light</string>
    <string name="server_standard">Standard</string>
    <string name="server_heavy">Heavy</string>
    <string name="server_veryheavy">Very Heavy</string>
    <string name="server_full">Full</string>
    <string name="server_menu">Help</string>
</resources>