<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20.0dip"
    android:layout_gravity="center" >
    
    <LinearLayout
      android:id="@+id/layoutRepublic"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_marginBottom="20dp"
      android:gravity="center"
      android:background="@color/gray_23"
      android:orientation="vertical">
 
      <ImageView
        android:id="@+id/imgRepublic"
        android:layout_width="128.0dip"
        android:layout_height="128.0dip"
        android:clickable="false"
        android:layout_gravity="center"
        android:src="@drawable/ic_republic"
        android:contentDescription="@string/image_placeholder"
        android:background="@color/gray_23"
        android:scaleType="fitCenter" />
 
      <TextView
        android:id="@+id/txtRepublic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginTop="2.0dip"
        android:gravity="center"
        android:text="@string/republic"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white" />
  </LinearLayout>
  
  <LinearLayout
      android:id="@+id/layoutEmpire"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_gravity="center"
      android:layout_weight="1"
      android:gravity="center"
      android:background="@color/gray_23"
      android:orientation="vertical">
 
      <ImageView
        android:id="@+id/imgEmpire"
        android:layout_width="128.0dip"
        android:layout_height="128.0dip"
        android:clickable="false"
        android:src="@drawable/ic_empire"
        android:layout_gravity="center"
        android:contentDescription="@string/image_placeholder"
        android:background="@color/gray_23"
        android:scaleType="fitCenter" />
 
      <TextView
        android:id="@+id/txtEmpire"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginTop="2.0dip"
        android:gravity="center"
        android:text="@string/empire"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white" />
  </LinearLayout>
</LinearLayout>
